# adventofcode2023

./: .gitignore  Cargo.toml  aoc.js
all/: Cargo.toml
all/src/: main.rs
aoc/: Cargo.toml
aoc-client/: Cargo.toml
aoc-client/src/: lib.rs
aoc/src/: lib.rs
cargo-aoc-setup/: Cargo.toml
cargo-aoc-setup/src/: lib.rs  main.rs
challenges/all/: Cargo.toml
challenges/all/src/: main.rs
challenges/day00/: Cargo.toml
challenges/day00/benches/: benches.rs
challenges/day00/src/: lib.rs  main.rs
challenges/day01/: Cargo.toml  README.md
challenges/day01/benches/: benches.rs
challenges/day01/src/: lib.rs  main.rs
challenges/day02/: Cargo.toml  README.md
challenges/day02/benches/: benches.rs
challenges/day02/src/: lib.rs  main.rs
challenges/day03/: Cargo.toml  README.md
challenges/day03/benches/: benches.rs
challenges/day03/src/: lib.rs  main.rs
challenges/day04/: Cargo.toml  README.md
challenges/day04/benches/: benches.rs
challenges/day04/src/: lib.rs  main.rs
challenges/day05/: Cargo.toml  README.md
challenges/day05/benches/: benches.rs
challenges/day05/src/: lib.rs  main.rs
challenges/day06/: Cargo.toml  README.md
challenges/day06/benches/: benches.rs
challenges/day06/src/: lib.rs  main.rs
challenges/day07/: Cargo.toml  README.md  input.txt  resp.html
challenges/day07/benches/: benches.rs
challenges/day07/src/: lib.rs  main.rs
challenges/day08/: Cargo.toml  README.md
challenges/day08/benches/: benches.rs
challenges/day08/src/: lib.rs  main.rs
challenges/day09/: Cargo.toml  README.md
challenges/day09/benches/: benches.rs
challenges/day09/src/: lib.rs  main.rs
challenges/day10/: Cargo.toml  README.md
challenges/day10/benches/: benches.rs
challenges/day10/src/: lib.rs  main.rs
challenges/day11/: Cargo.toml  README.md
challenges/day11/benches/: benches.rs
challenges/day11/src/: lib.rs  main.rs
challenges/day12/: Cargo.toml  README.md
challenges/day12/benches/: benches.rs
challenges/day12/src/: lib.rs  main.rs
challenges/day13/: Cargo.toml  README.md
challenges/day13/benches/: benches.rs
challenges/day13/src/: lib.rs  main.rs
challenges/day14/: Cargo.toml  README.md
challenges/day14/benches/: benches.rs
challenges/day14/src/: lib.rs  main.rs
challenges/day15/: Cargo.toml  README.md
challenges/day15/benches/: benches.rs
challenges/day15/src/: lib.rs  main.rs
challenges/day16/: Cargo.toml  README.md
challenges/day16/benches/: benches.rs
challenges/day16/src/: lib.rs  main.rs
challenges/day17/: Cargo.toml  README.md
challenges/day17/benches/: benches.rs
challenges/day17/src/: lib.rs  main.rs
challenges/day18/: Cargo.toml  README.md
challenges/day18/benches/: benches.rs
challenges/day18/src/: lib.rs  main.rs
challenges/day19/: Cargo.toml  README.md  resp.html
challenges/day19/benches/: benches.rs
challenges/day19/src/: lib.rs  main.rs
challenges/day20/: Cargo.toml  README.md
challenges/day20/benches/: benches.rs
challenges/day20/src/: lib.rs  main.rs
firedbg/: target.json
parsers/: Cargo.toml
parsers/src/: ext.rs  gen.rs  lib.rs
parsers/src/ext/: separated_list.rs
x/: Cargo.toml
