[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
nom = "7.1.3"
ureq = { version = "2.9.1", features = ["native-certs"] }
fs-err = "2"
walkdir = "2.4.0"
scraper = "0.18.1"
comrak = { version = "0.19", git = "https://github.com/conradludgate/comrak", branch = "main" }
ego-tree = "0.6.2"
url = "2.5"
# gix = { version = "0.55", default-features = false, features = [] }
