[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
parsers = { path = "../../parsers" }
aoc = { path = "../../aoc" }
arrayvec = "0.7"
bytemuck = "1"
pathfinding = "4"
regex = "1"

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "benches"
harness = false
