[package]
name = "day07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
parsers = { path = "../../parsers" }
aoc = { path = "../../aoc" }
rayon = "1"
radsort = "0.1.0"

[dev-dependencies]
divan = "0.1.3"

[[bench]]
name = "benches"
harness = false
